--- a/articles/spring-apps/toc.yml
+++ b/articles/spring-apps/toc.yml
@@ -67,7 +67,7 @@ items:
     - name: Custom DNS name
       href: tutorial-custom-domain.md
     - name: Managed identity to connect MySQL
-      href: tutorial-managed-identities-mysql.md
+      href: /azure/developer/java/spring-framework/deploy-passwordless-spring-database-app?tabs=mysql
     - name: Managed identity to connect Key Vault
       href: tutorial-managed-identities-key-vault.md
     - name: Managed identity to invoke Azure Functions
