Update to TOC and grammatical corrections

--- a/articles/azure-arc/vmware-vsphere/toc.yml
+++ b/articles/azure-arc/vmware-vsphere/toc.yml
@@ -33,3 +33,5 @@
       href: /cli/azure/connectedvmware
     - name: Azure Arc resource bridge
       href:  /cli/azure/arcappliance
+  - name: Support Matrix for Arc-enabled VMware vSphere
+    href: support-matrix-for-arc-enabled-vmware-vsphere.md
