--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -500,6 +500,28 @@
           href: ../automation/automation-runbook-gallery.md
     - name: Troubleshooting
       items:
+        - name: Create or delete web apps FAQ 
+          href: /troubleshoot/azure/app-service/create-delete-resources-faq?toc=/azure/app-service/toc.json
+        - name: Availability, performance, and application FAQs
+          href: /troubleshoot/azure/app-service/web-apps-performance-faqs?toc=/azure/app-service/toc.json
+        - name: App Service Compliance with PCI Standards 3.0 and 3.1
+          href: /troubleshoot/azure/app-service/app-service-compliance-wit?toc=/azure/app-service/toc.json
+        - name: Backing up, restoring, and cloning
+          href: /troubleshoot/azure/app-service/backing-up-restoring-and-cloning-microsoft-azure-app-services?toc=/azure/app-service/toc.json
+        - name: Built-in Linux containers FAQs
+          href: /troubleshoot/azure/app-service/faqs-app-service-linux?toc=/azure/app-service/toc.json
+        - name: Configuration and management FAQs for Web Apps
+          href: /troubleshoot/azure/app-service/web-apps-configuration-and-management-faqs?toc=/azure/app-service/toc.json
+        - name: Deployment FAQs for Web Apps
+          href: /troubleshoot/azure/app-service/web-apps-deployment-faqs?toc=/azure/app-service/toc.json
+        - name: FAQs about scaling web apps
+          href: /troubleshoot/azure/app-service/scaling-web-app-faq?toc=/azure/app-service/toc.json
+        - name: Open-source technologies FAQs for Web Apps
+          href: /troubleshoot/azure/app-service/web-apps-open-source-technologies-faqs?toc=/azure/app-service/toc.json
+        - name: Troubleshoot temporary storage
+          href: /troubleshoot/azure/app-service/temporary-storage-for-azure-app-service?toc=/azure/app-service/toc.json
+        - name: Troubleshoot instance-related issues
+          href:  /troubleshoot/azure/app-service/troubleshoot-instance-related-issues-on-azure-app-service?toc=/azure/app-service/toc.json
         - name: Troubleshoot intermittent outbound connection errors
           href: troubleshoot-intermittent-outbound-connection-errors.md
         - name: Troubleshoot with Visual Studio
@@ -512,8 +534,7 @@
           href: troubleshoot-performance-degradation.md
         - name: Troubleshoot domain and certificate issues
           href: troubleshoot-domain-ssl-certificates.md
-        - name: FAQs about create or delete web apps 
-          href: /troubleshoot/azure/app-service/create-delete-resources-faq?toc=/azure/app-service/toc.json
+
     - name: IP address change
       items:
       - name: Inbound IP address
