--- a/articles/private-5g-core/index.yml
+++ b/articles/private-5g-core/index.yml
@@ -45,8 +45,10 @@ landingContent:
             url: collect-required-information-for-private-mobile-network.md
           - text: Deploy a private mobile network - Azure portal
             url: how-to-guide-deploy-a-private-mobile-network-azure-portal.md
-          - text: Manage network slices
+          - text: Manage network slices - Azure portal
             url: manage-network-slices.md
+          - text: Create a network slice - ARM template
+            url: create-slice-arm-template.md
       - linkListType: quickstart
         links:
           - text: Deploy a private mobile network and site - ARM template
