--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -59,10 +59,10 @@
         href: migrate-to-v2-execution-pipeline.md  
     - name: Upgrade endpoints
       items:
-      - name: "Online endpoints (comparison of SDK)"
+      - name: "Online endpoints"
         displayName: migration, v1, v2
         href: migrate-to-v2-deploy-endpoints.md
-      - name: "Transition to managed online endpoints"
+      - name: "Upgrade from ACI webs ervices to managed online endpoints"
         displayName: migration, v1, v2
         href: migrate-to-v2-managed-online-endpoints.md 
 - name: Quickstart
