--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -11,15 +11,15 @@
       href: choose-api.md
     - name: NoSQL vs. relational databases
       href: relational-nosql.md
-- name: SQL/Core API
+- name: NoSQL
   href: sql/toc.yml
-- name: MongoDB API
+- name: MongoDB
   href: mongodb/toc.yml
-- name: PostgreSQL API
+- name: PostgreSQL
   href: postgresql/toc.yml
-- name: Cassandra API
+- name: Apache Cassandra
   href: cassandra/toc.yml
-- name: Gremlin API
+- name: Apache Gremlin
   href: graph/toc.yml
-- name: Table API
+- name: Table
   href: table/toc.yml
