--- a/articles/iot-fundamentals/index.yml
+++ b/articles/iot-fundamentals/index.yml
@@ -204,7 +204,7 @@ tools:
     # Card
     - title: Azure IoT SDK for C reference
       imageSrc: /media/logos/logo_c.svg
-      url: /azure/iot-hub/iot-c-sdk-ref/
+      url: https://github.com/Azure/azure-iot-sdk-c/
     # Card
     - title: Azure IoT SDK for Python
       imageSrc: /media/logos/logo_python.svg
