--- a/articles/machine-learning/v1/toc.yml
+++ b/articles/machine-learning/v1/toc.yml
@@ -112,22 +112,15 @@
     - name: Examples repository
       displayName: example, examples, jupyter, python, notebook, github
       href: https://github.com/azure/machinelearningnotebooks
-- name: How-to guides (v1)
+- name: Infrastructure & security (v1)
   items:
-  - name: Install and set up the CLI (v1)
-    displayName: azurecli, mlops
-    href: reference-azure-machine-learning-cli.md
-  - name: Manage workspace using CLI (v1)
-    href: how-to-manage-workspace-cli.md
-  - name: Set up software environments CLI (v1)
-    href: how-to-use-environments.md
-  - name: Use private Python packages
-    displayName: pip, Conda, anaconda
-    href: how-to-use-private-python-packages.md
+
   - name: Create & manage compute resources
-  - name: Workspace Diagnostics
-    href: how-to-workspace-diagnostic-api.md
     items:
+    - name: Manage workspace using CLI (v1)
+      href: how-to-manage-workspace-cli.md
+    - name: Workspace Diagnostics
+      href: how-to-workspace-diagnostic-api.md
     - name: Compute instance
       displayName: compute target
       href: how-to-create-manage-compute-instance.md
@@ -137,6 +130,8 @@
     - name: Azure Kubernetes Service
       displayName: AKS, inference
       href: how-to-create-attach-kubernetes.md
+    - name: Link to Azure Synapse Analytics workspace
+      href: ../how-to-link-synapse-ml-workspaces.md
   - name: Security
     items:
     - name: Use managed identities for access control
@@ -158,6 +153,20 @@
       - name: Configure secure web services (v1)
         displayName: ssl, tls
         href: how-to-secure-web-service.md
+- name: How-to guides (v1)
+  items:
+  - name: Install and set up the CLI (v1)
+    displayName: azurecli, mlops
+    href: reference-azure-machine-learning-cli.md
+  - name: Set up software environments CLI (v1)
+    href: how-to-use-environments.md
+  - name: Set input & output directories
+    displayName: large data, write, experiment files, size limit
+    href: ../how-to-save-write-experiment-files.md
+  - name: Use private Python packages
+    displayName: pip, Conda, anaconda
+    href: how-to-use-private-python-packages.md
+
   - name: Work with data
     items:
     - name: Access data
@@ -247,15 +256,26 @@
       - name: Auto-train a natural language processing model
         displayName: nlp, auto ML, automl, SDK
         href: how-to-auto-train-nlp-models-v1.md
+      - name: Auto-train a forecast model
+        displayName: time series
+        href: how-to-auto-train-forecast.md
       - name: Set up AutoML to train computer vision models with Python
         displayName: auto ML, automl, SDK
         href: how-to-auto-train-image-models-v1.md
       - name: Auto-train a small object detection model
         displayName: computer vision, image, image model
         href: how-to-use-automl-small-object-detect-v1.md
+      - name: Data splits & cross-validation (Python)
+        displayName: automl, feature engineering, feature importance
+        href: ../how-to-configure-cross-validation-data-splits.md
+      - name: Featurization in automated ML (Python)
+        displayName: automl, feature engineering, feature importance, BERT
+        href: ../how-to-configure-auto-features.md
       - name: Local inference using ONNX
         displayName: SDK, automl
         href: how-to-inference-onnx-automl-image-models-v1.md
+      - name: Troubleshoot automated ML
+        href: ../how-to-troubleshoot-auto-ml.md
     - name: Track experiments with MLflow
       displayName: log, monitor, metrics, model registry, register
       href: how-to-use-mlflow.md
