--- a/articles/machine-learning/v1/toc.yml
+++ b/articles/machine-learning/v1/toc.yml
@@ -258,7 +258,7 @@
         href: how-to-auto-train-nlp-models-v1.md
       - name: Auto-train a forecast model
         displayName: time series
-        href: how-to-auto-train-forecast.md
+        href: ../how-to-auto-train-forecast.md
       - name: Set up AutoML to train computer vision models with Python
         displayName: auto ML, automl, SDK
         href: how-to-auto-train-image-models-v1.md
