Update Azure CLI to Command line

--- a/articles/container-apps/TOC.yml
+++ b/articles/container-apps/TOC.yml
@@ -19,7 +19,7 @@
           href: quickstart-portal.md
         - name: Command line
           href: get-started.md
-      - name: With existing container image
+      - name: With an existing container image
         expanded: true
         items:
         - name: Azure portal
