--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -62,7 +62,7 @@
       - name: "Online endpoints"
         displayName: migration, v1, v2
         href: migrate-to-v2-deploy-endpoints.md
-      - name: "Upgrade from ACI webs ervices to managed online endpoints"
+      - name: "Upgrade from ACI webs services to managed online endpoints"
         displayName: migration, v1, v2
         href: migrate-to-v2-managed-online-endpoints.md 
 - name: Quickstart
