--- a/articles/active-directory/conditional-access/TOC.yml
+++ b/articles/active-directory/conditional-access/TOC.yml
@@ -66,6 +66,8 @@
       href: howto-conditional-access-policy-registration.md
     - name: Block legacy authentication
       href: howto-conditional-access-policy-block-legacy.md
+    - name: Require MFA for guest users
+      href: howto-policy-guest-mfa.md
     - name: Require MFA for all users
       href: howto-conditional-access-policy-all-users-mfa.md
     - name: Require MFA for Azure management
@@ -74,16 +76,22 @@
       href: howto-conditional-access-policy-risk.md
     - name: Require password change for risky users
       href: howto-conditional-access-policy-risk-user.md
-    - name: Require compliant or hybrid joined devices
-      href: howto-conditional-access-policy-compliant-device.md
+    - name: Require compliant or hybrid joined devices for admins
+      href: howto-conditional-access-policy-compliant-device-admin.md
+    - name: Block access for unknown or unsupported device platform
+      href: howto-policy-unknown-unsupported-device.md
     - name: Require approved app or app protection policy
       href: howto-policy-approved-app-or-app-protection.md
+    - name: No persistent browser session
+      href: howto-policy-persistent-browser-session.md
+    - name: Require compliant or hybrid joined devices
+      href: howto-conditional-access-policy-compliant-device.md
+    - name: Require MFA for Intune enrollment
+      href: /mem/intune/enrollment/multi-factor-authentication?toc=/azure/active-directory/conditional-access/TOC.json
     - name: Block access by location
       href: howto-conditional-access-policy-location.md
     - name: Block access
       href: howto-conditional-access-policy-block-access.md
-    - name: Require MFA for Intune enrollment
-      href: /mem/intune/enrollment/multi-factor-authentication?toc=/azure/active-directory/conditional-access/TOC.json
   - name: Configure resilience defaults
     href: resilience-defaults.md
   - name: Configure report only mode
