Update allocation policies round 2

--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -28,18 +28,16 @@ items:
     href: quick-create-simulated-device-tpm.md
 - name: Tutorials
   items:
-  - name: 1 - Provision sets of devices with enrollment groups
+  - name: Provision sets of devices with enrollment groups
     items:
      - name: Provision devices with symmetric keys
        href: how-to-legacy-device-symm-key.md
      - name: Provision multiple X.509 devices
        href: tutorial-custom-hsm-enrollment-group-x509.md
+  - name: Provision devices to multiple hubs
+    items:
      - name: Use custom allocation policies
        href: tutorial-custom-allocation-policies.md
-  - name: 2 - Provision devices to multiple hubs
-    items:
-     - name: Link multiple hubs to DPS
-       href: tutorial-provision-multiple-hubs.md
      - name: Provision for geolatency
        href: how-to-provision-multitenant.md
 - name: Concepts
@@ -94,6 +92,8 @@ items:
     items:
     - name: Manage enrollments - Portal
       href: how-to-manage-enrollments.md
+    - name: Manage allocation policies
+      href: how-to-use-allocation-policies.md
     - name: Configure verified CA certificates
       href: how-to-verify-certificates.md
     - name: Roll device certificates
