--- a/articles/spring-apps/toc.yml
+++ b/articles/spring-apps/toc.yml
@@ -226,6 +226,8 @@ items:
       href: how-to-access-app-from-internet-virtual-network.md
     - name: Configure Palo Alto
       href: how-to-configure-palo-alto.md
+    - name: Customize the ingress configuration in Azure Spring Apps
+      href: how-to-configure-ingress.md
     - name: Customer responsibilities running Azure Spring Apps in VNET
       href: vnet-customer-responsibilities.md
     - name: Troubleshooting Azure Spring Apps in virtual networks
