--- a/articles/active-directory/authentication/certificate-based-authentication-faq.yml
+++ b/articles/active-directory/authentication/certificate-based-authentication-faq.yml
@@ -111,9 +111,11 @@ additionalContent: |
           
     * [Overview of Azure AD CBA](concept-certificate-based-authentication.md)
     * [Technical deep dive for Azure AD CBA](concept-certificate-based-authentication-technical-deep-dive.md)
-    * [Limitations with Azure AD CBA](concept-certificate-based-authentication-limitations.md)
+    * Azure AD CBA on iOS devices](concept-certificate-based-authentication-mobile-ios.md)
+    * [Azure AD CBA on Android devices](concept-certificate-based-authentication-mobile-android.md)
     * [How to configure Azure AD CBA](how-to-certificate-based-authentication.md)
     * [Windows smart card logon using Azure AD CBA](concept-certificate-based-authentication-smartcard.md)
-    * [Azure AD CBA on mobile devices (Android and iOS)](concept-certificate-based-authentication-mobile.md)
-    * [How to migrate federated users](concept-certificate-based-authentication-migration.md)
     * [Certificate user IDs](concept-certificate-based-authentication-certificateuserids.md)
+    * [How to migrate federated users](concept-certificate-based-authentication-migration.md)
+    * [Advanced features](concept-certificate-based-authentication-advanced-features.md)
+    * [FAQ](certificate-based-authentication-faq.yml)
