--- a/articles/active-directory/authentication/certificate-based-authentication-faq.yml
+++ b/articles/active-directory/authentication/certificate-based-authentication-faq.yml
@@ -104,6 +104,27 @@ sections:
           Will the changes to the Authentication methods policy take effect immediately?
         answer: |
           The policy is cached. After a policy update, it may take up to an hour for the changes to take effect.
+      
+      - question: |
+          Why do I see the Certificate based auth method option after it fails?
+        answer: |
+          The authentication method policy framework always would show all the available methods to the user so they can retry if the initial login failed. Azure AD does not filter out any available auth methods depending on successful auth or failure auth.
+
+      - question: |
+          Why does certificate-based auth (CBA) loops once it fails?
+        answer: |
+          The browser caches the certificate once the certificate picker comes up and if the user retries the cached certificate is used automatically. The user should close the browser and reopen a new session to try CBA again.          
+
+      - question: |
+          Why single factor certificates cannot be used to get MFA?
+        answer: |
+          There is no support for a second factor when the first factor is single factor certificates. We are working on adding support for second factors soon.
+          
+      - question: |
+          Will the changes to the Authentication methods policy take effect immediately?
+        answer: |
+          The policy is cached. After a policy update, it may take up to an hour for the changes to take effect.
+       
           
 additionalContent: |
   ## Next steps
